--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,7 @@
 <li>
 	{{name}}
 
-	<button class="change-sleep" data-id="{{id}}" data-newdevour=""="{{devoured}}">
-		{{#if devoured}}DEVOUR TIME!{{else}}NOT DEVOURED!{{/if}}
+	<button class="change-devour" data-id="{{id}}" data-newDevour=""="{{devoured}}">
+		{{#if devoured}}DEVOUR TIME!{{else}}Let's have another!{{/if}}
 	</button>
-
-	{{!-- <button class="delete-cat" data-id="{{this.id}}">DELETE!</button> --}}
 </li>
